--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,10 +32,10 @@ layout: compress
 <div class="footer_site">
 <hr/>
 <div class="footer_copyright">
- © 2022 HUST · Jian Tang | Based on &nbsp
+ © 2022 HUST · Jian Tang | Based on&nbsp
   <a class="page_a"  href="https://github.com/RayeRen/acad-homepage.github.io">
   acad
-  </a>&nbsp模板
+  </a>&nbsp
 </div>
 </div>
   </body>
