--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@ layout: compress
 <div class="footer_copyright">
  © 2022 HUST · Jian Tang
   <a class="page_a"  href="https://github.com/RayeRen/acad-homepage.github.io">
-  acad
+  <!-- acad -->
   </a>&nbsp
 </div>
 </div>
